0.7 ?
	-CHANGE (): platform global now called config in .mtt
	- FIXED (): package and type filtering
	- FIXED (474): Extensive work on sorting and displaying Typedefs
	- FIXED (474): Improper handling of --footerText embedded =

	Targets:
		- Inline tags eg. @deprecated As of some date, replaced by {@link #newMethod()}
		- Improve default template look for --developer and typedefs
			(check js.Checkbox fields, which are "available in all platforms")(Franco)
		- Add --showSourceFilePath for hard link to source files

0.6 2009-01-14
	- FIXED: Constructors not getting docs.
	- FIXED: Template for typedefs showing wrong platforms
	- FIXED: Templates not showing platforms for members
	- ADDED: --footerText and --footerTextFile switches for adding raw html to Types pages
	- ADDED: --generateTodo flag for making /todo.html
	- ADDED: @author [raw]
	- ADDED: @requires tag for Type or Function requirements (ie. specific neko ndll, etc)
	- ADDED: @see [path]
	- ADDED: @todo tag and todo.html file generation
	- ADDED: @type [name] [description] for type params (ie function blah<T>)

	- CHANGE: Moved Root Types to top of packages in all_packages.mtt
	- CHANGE: Improved tag detection in method/var/class documentation
	- The current available tags are:
	@author
	@deprecated
	@param
	@requires
	@return (or @returns)
	@see
	@throws
	@todo
	@type


0.5 2009-01-12
	- Added --installTemplate switch to copy all images and stylesheet from template dir
	- Added --developer switch to toggle all --showPrivate* flags
	- Added platform.developer Bool which is true if any showPrivate* flag is set
	- Added platforms list to platform
	- Fixed private type generation